upgrade maven plugins, replace deprecated compilerArguments with compilerArgs